# fty-metric-compute

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Findfty_proto.cmake  Jenkinsfile  LICENSE  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  install.xml  license.xml  project.xml
builds/check_zproject/: ci_build.sh
doc/: .gitignore  Makefile.am  agent_cm.txt  asciidoc.conf  fty-metric-compute.adoc
include/: Makefile.am  agent_cm.h  agent_cm_library.h  bios_cm_server.h  fty_mc_server.h  fty_metric_compute.h  fty_metric_compute_library.h
packaging/debian/: agent-cm.install  changelog  control  copyright  fty-metric-compute.dsc.obs  fty-metric-compute.install  fty-metric-compute.manpages  libagent-cm-dev.install  libagent-cm0.install  libfty-metric-compute-dev.install  libfty-metric-compute0.install  rules
packaging/redhat/: agent-cm.spec  fty-metric-compute.spec
resources/: fty-metric-compute.cfg.in  fty-metric-compute.conf.in  fty-metric-compute.service.in
src/: .gitignore  Makemodule-local.am  Makemodule.am  agent_cm_classes.h  agent_cm_selftest.c  bios-agent-cm.conf.in  bios-agent-cm.service.in  bios_agent_cm.c  bios_cm_server.c  cmstats.c  cmstats.cc  cmstats.h  cmsteps.c  cmsteps.cc  cmsteps.h  fty-metric-compute.cfg.in  fty-metric-compute.conf  fty-metric-compute.service.in  fty_mc_server.c  fty_mc_server.cc  fty_mc_server.h  fty_metric_compute.c  fty_metric_compute.cc  fty_metric_compute_classes.h  fty_metric_compute_private_selftest.c  fty_metric_compute_private_selftest.cc  fty_metric_compute_selftest.c  fty_metric_compute_selftest.cc  libagent_cm.pc.in  libfty_metric_compute.pc.in
tests/: cmstats.cpp  cmsteps.cpp  main.cc  mc_server.cpp
